cluster-talos/kubernetes/apps/tautulli/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tautulli
  labels:
    k10.kasten.io/backup: "true"
